# bok-comp-eval

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
eval/: _production_shims.py  analyze_pilot.py  dump_context_tiers.py  dump_guide_variants.py  expanded_questions.jsonl  full_questions.jsonl  full_questions_v2.jsonl  gen_questions.py  oos_expansion.jsonl  run_baseline.py  run_extra_llms.sh  run_main_experiment.sh  run_oos_extension.sh  schema.json  scorer.py  seed_questions.jsonl
eval/context_tiers/: regulation_cypher.md  regulation_cypher_guide.md  regulation_jsonld.md  regulation_jsonld_guide.md  regulation_nl.md  regulation_tql.md  regulation_tql_guide.md
paper/: README.md  main.tex  refs.bib
paper/figures/: boundary_oos.tex  form_sensitivity.tex  main_bar.tex  nl_pareto.tex
paper/sections/: 01_intro.tex  02_related.tex  03_system.tex  04_setup.tex  05_results.tex  06_mechanism.tex  07_discussion.tex  08_limitations.tex  09_conclusion.tex  A_appendix.tex  abstract.tex
paper/tables/: eval_set.tex  mcnemar.tex  overall_acc.tex  token_cost.tex
