[project]
name = "bok-comp-eval"
version = "0.1.0"
description = "Evaluation set and scorer for the Bank of Korea Compensation Regulations KG-RAG system"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
runner = [
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]
analysis = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.11",
    "statsmodels>=0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eval"]
